src/objects/ffbf__BankFormatDefinitionRecordType__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__BankFormatDefinition__c</fullName>
        <label>Bank Format Definition</label>
        <referenceTo>ffbf__BankFormatDefinition__c</referenceTo>
        <relationshipName>BankFormatRecordTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbf__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffbf__OutputTypeSequence__c</fullName>
        <description>This number help us to know the general output sequence for all records, it doesn&apos;t matter the type, header, detail ....</description>
        <label>Output Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__OutputTypeValue__c</fullName>
        <defaultValue>1</defaultValue>
        <description>In case we have more than one line with the same type, Detail, for instance, this number help us to know the order</description>
        <label>Output Type Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__OutputType__c</fullName>
        <label>Deprecated: Output Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__RecordLength__c</fullName>
        <label>Record Length</label>
        <summarizedField>ffbf__BankFormatDefinitionField__c.ffbf__RecordSize__c</summarizedField>
        <summaryForeignKey>ffbf__BankFormatDefinitionField__c.ffbf__BankFormatDefinitionRecordType__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffbf__RecordTypeValue__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                    <default>true</default>
                    <label>Header</label>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
                <value>
                    <fullName>Footer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__RecordType__c</fullName>
        <label>Deprecated: Record Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Bank Format Definition Record Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Format Definition Record Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>